Fixed mobile lighting and spacing

--- a/personal-website/styles/Icons.module.css
+++ b/personal-website/styles/Icons.module.css
@@ -2,10 +2,18 @@
     width: 30px;
 }
 
+.leftMargin {
+    margin-left: 15px;
+}
+
 /* SMARTPHONES PORTRAIT */
 @media only screen and (min-width: 300px) {
     .icon {
         width: 20px;
+    }
+
+    .leftMargin {
+        margin-left: 10px;
     }
 }
 
@@ -20,5 +28,9 @@
 @media only screen and (min-width: 1024px) {
     .icon {
         width: 30px;
+    }
+
+    .leftMargin {
+        margin-left: 15px;
     }
 }
