--- a/personal-website/styles/XDisplay.module.css
+++ b/personal-website/styles/XDisplay.module.css
@@ -3,13 +3,12 @@
     padding: 10;
 
     /* border: solid white 4px; */
-
 }
 
 .displayRow {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-block: 20px;
 }
 
 .displayItem {
@@ -58,6 +57,15 @@
         font-size: 30px;
         line-height: .8em;
     }
+
+    .displayItemLitByMouse {
+        text-shadow: 0px 0px 0px rgb(255, 255, 255);
+    }
+
+    .displayItemLitByCycle {
+        text-shadow: 0px 0px 0px rgb(255, 255, 255);
+    }
+
 }
 
 /* SMARTPHONES LANDSCAPE */
@@ -85,5 +93,13 @@
         width: 65px;
         font-size: 60px;
         line-height: 1em;
+    }
+
+    .displayItemLitByMouse {
+        text-shadow: 0px 0px 10px rgb(255, 255, 255);
+    }
+
+    .displayItemLitByCycle {
+        text-shadow: 0px 0px 10px rgb(255, 255, 255);
     }
 }
