--- a/personal-website/styles/globals.css
+++ b/personal-website/styles/globals.css
@@ -130,6 +130,7 @@ a {
 @media only screen and (min-width: 300px) {
   .nameText {
     font-size: 60px;
+    text-shadow: 0px 0px 0px rgb(255, 255, 255);
   }
 
   .headerText {
@@ -141,10 +142,12 @@ a {
 
   .smallHeaderText {
     font-size: 20px;
+    text-shadow: 0px 0px 0px rgb(255, 255, 255);
   }
 
   .smallSubheaderText {
     font-size: 12px;
+    text-shadow: 0px 0px 0px rgb(255, 255, 255);
   }
 
   .paragraphText {
@@ -161,10 +164,14 @@ a {
 
   .landingSection {
     min-height: 75vh;
+
   }
 
   .landingSectionContainer {
     flex-direction: column;
+    min-height: 50vh;
+    justify-content: space-between;
+    /* border: solid rgb(0, 30, 255) 4px; */
   }
 
 
@@ -182,18 +189,6 @@ a {
     font-size: 60px;
   }
 
-  .headerText {
-    font-size: 60px;
-    line-height: 1em;
-    text-shadow: 0px 0px 0px rgb(255, 255, 255);
-  }
-
-  .paragraphText {
-    font-size: 12px;
-    line-height: 1.4em;
-    text-shadow: 0px 0px 0px rgb(255, 255, 255);
-  }
-
   .paragraphText {
     font-size: 20px;
   }
@@ -208,21 +203,6 @@ a {
 
 /* TABLETS PORTRAIT */
 @media only screen and (min-width: 768px) {
-  .nameText {
-    font-size: 60px;
-  }
-
-  .headerText {
-    font-size: 60px;
-    line-height: 1em;
-    text-shadow: 0px 0px 10px rgb(255, 255, 255);
-  }
-
-  .paragraphText {
-    font-size: 20px;
-    line-height: 1.4em;
-    text-shadow: 0px 0px 0px rgb(255, 255, 255);
-  }
 
   .listSection {
     width: 70vw;
@@ -238,6 +218,7 @@ a {
 @media only screen and (min-width: 1024px) {
   .nameText {
     font-size: 100px;
+    text-shadow: 0px 0px 10px rgb(255, 255, 255);
   }
 
   .headerText {
@@ -248,6 +229,7 @@ a {
 
   .smallHeaderText {
     font-size: 30px;
+    text-shadow: 0px 0px 2px rgb(255, 255, 255);
   }
 
   .smallSubheaderText {
@@ -257,7 +239,6 @@ a {
   .paragraphText {
     font-size: 20px;
     line-height: 1.4em;
-    text-shadow: 0px 0px 0px rgb(255, 255, 255);
   }
 
   .listSection {
@@ -270,12 +251,12 @@ a {
 
   .landingSectionContainer {
     flex-direction: row;
+    min-height: 0vh;
+    justify-content: center;
+    /* border: solid rgb(0, 30, 255) 4px; */
   }
 
 
-  .workInProgress {
-    font-size: 40px;
-  }
 }
 
 /* LARGE DESKTOP */
@@ -301,7 +282,6 @@ a {
   .paragraphText {
     font-size: 20px;
     line-height: 1.4em;
-    text-shadow: 0px 0px 0px rgb(255, 255, 255);
   }
 
   .listSection {
@@ -309,13 +289,4 @@ a {
   }
 
 
-
-  .landingSectionContainer {
-    flex-direction: row;
-  }
-
-
-  .workInProgress {
-    font-size: 40px;
-  }
 }
